syntax = "proto3";

package accounts;

service Accounts {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
}

message CreateAccountRequest {
    string name = 1;
    string password = 2;
    string email = 3;
}

message CreateAccountResponse {
    string id = 1;
}
